# test-boss

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/accounts/: endpoints.rs  schema.rs  service.rs
src/projects/: account_endpoints.rs  endpoints.rs  mod.rs  schema.rs  service.rs
src/service/: config.rs  db.rs  http_errors.rs  mod.rs  passwords.rs  schema.rs  validation.rs
src/sessions/: endpoints.rs  guards.rs  jwt.rs  mod.rs  schema.rs  service.rs
src/testchecks/: endpoints.rs  mod.rs  schema.rs  service.rs
src/testlists/: endpoints.rs  project_endpoints.rs  schema.rs  service.rs
src/testreports/: endpoints.rs  schema.rs  service.rs
src/testresults/: schema.rs  service.rs
src/users/: endpoints.rs  mod.rs  roles.rs  schema.rs  service.rs
webapp/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json  typings.d.ts
webapp/src/: main.ts  styles.scss
webapp/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
webapp/src/app/guards/: authenticated.guard.ts  authorized.guard.ts
webapp/src/app/interceptors/: auth.interceptor.ts
webapp/src/app/lib/: assets.ts  http.ts  validators.ts
webapp/src/app/models/: common.ts
webapp/src/app/pipes/: user-image.pipe.ts
webapp/src/app/services/accounts/: accounts.model.ts  accounts.service.spec.ts  accounts.service.ts
webapp/src/app/services/auth/: auth.service.ts  login.model.ts
webapp/src/app/services/notification/: notification.service.spec.ts  (+1 more)
webapp/src/environments/: environment.development.ts  environment.ts
webapp/src/locale/: messages.it-IT.xlf  messages.xlf
(+74 files in other folders)
