[package]
name = "test-boss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
bson = { version = "2.10.0", features = ["chrono", "chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel-async = "0.4.1"
dotenv = "0.15.0"
email_address = "0.2.4"
jsonwebtoken = "9.3.0"
log = "0.4.21"
mongodb = "2.8.2"
rocket = { version = "0.5.0", features = ["secrets", "uuid", "json"] }
rocket_cors = "0.6.0"
rocket_db_pools = "0.1.0"
serde = "1.0.200"
serde_json = "1.0.117"
zxcvbn = "2.2.2"
